--- a/book.bib
+++ b/book.bib
@@ -19,6 +19,26 @@
 	publisher={Taylor \& Francis}
 }
 
+@book{Hockney_1988_PIC, 
+	title={Computer Simulation Using Particles}, 
+	author={Hockney, R.W. and Eastwood, J.W.}, 
+	isbn = {9780367806934}, 
+	year = {1988}, 
+	url = {https://doi.org/10.1201/9780367806934},
+	publisher = {CRC Press}
+}
+
+@book{Montgomery_1964_Plasma,
+	title={Plasma Kinetic Theory},
+	author={Montgomery, D.C. and Tidman, D.A.},
+	lccn={63023536},
+	series={McGraw-Hill advanced physics monograph series},
+	url={https://books.google.com/books?id=ltNEAAAAIAAJ},
+	year={1964},
+	publisher={McGraw-Hill}
+}
+
+
 @book{Han_2011_Data,
 	title={Data Mining: Concepts and Techniques},
 	author={Han, J. and Kamber, M. and Pei, J.},
