--- a/pic.bib
+++ b/pic.bib
@@ -17,6 +17,20 @@
 	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{Hockney_1971_JoCP,
+	title = {Measurements of collision and heating times in a two-dimensional thermal computer plasma},
+	journal = {Journal of Computational Physics},
+	volume = {8},
+	number = {1},
+	pages = {19-44},
+	year = {1971},
+	issn = {0021-9991},
+	doi = {https://doi.org/10.1016/0021-9991(71)90032-5},
+	url = {https://www.sciencedirect.com/science/article/pii/0021999171900325},
+	author = {R.W Hockney},
+	abstract = {We have investigated the nearest grid point (NGP) and the cloud in cell (CIC) particle models of a plasma, together with two other models obtained from the above by smoothing the potential before use (HNGP and HCIC models). The collision time is found to be only slightly dependent on the model and is given to 20 % by (τcoll/τpe) = n(λD2 +W2), where n is the density and W the width of the particles (W = H, the mesh spacing for NGP and CIC; W = 2H for HNGP and HCIC). The ratio of electric-field energy to particle energy is given by 〈E2〉/8π ÷ nmvth2 = 0.12/n(λD2 + W2). Stochastic heating due to the finite size of the space mesh and the time step DT is correlated as a function of H/λD and ωpeDT. An optimum path in this parameter plane is found to be (wpeDT)opt= min [12H/λD, 1]. On this path the ratio of the heating time (the time for the average kinetic energy of an electron to increase by 12kT) to the collision time is (τH/gtcoll) = K2/(H/λD)2, where K2 = 2.1 (NGP), 6.4 (HNGP), 41 (CIC), 200 (HCIC). The models are compared on the basis of the cost in computer time per square collisionless plasma period per mesh cell. If we permit computing provided (τH/τcoll) > 10 (or better than 2.5 % energy conservation in a collision time) then the most economic model to use is given by the tableau: 0 ← NGP → 0.45 ← HNGP → 0.8 ← CIC → 2.0 ← HCIC → 4.5, where the name of the model is written between the values of H/λD for which it is best suited. Alternatively, if we accept a model provided (τH/τcoll) > 1 (or better than 25% energy conservation in a collision time), then the favoured ranges for the different models are 0 ← NGP → 1.5 ← HNGP → 2.5 ← CIC → 6.5 ← HCIC → 14. None of the models considered may be used for H/λD > 14.}
+}
+
 @article{Welch_2004_LSP,
 	title = {Implementation of an non-iterative implicit electromagnetic field solver for dense plasma simulation},
 	journal = {Computer Physics Communications},
