--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,94 @@
 	pages={1–50}
 }
 
+@article{Ziegler_2010_SRIM,
+	title = {SRIM – The stopping and range of ions in matter (2010)},
+	journal = {Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
+	volume = {268},
+	number = {11},
+	pages = {1818-1823},
+	year = {2010},
+	note = {19th International Conference on Ion Beam Analysis},
+	issn = {0168-583X},
+	doi = {https://doi.org/10.1016/j.nimb.2010.02.091},
+	url = {https://www.sciencedirect.com/science/article/pii/S0168583X10001862},
+	author = {James F. Ziegler and M.D. Ziegler and J.P. Biersack},
+	keywords = {SRIM, Ion stopping, Stopping power, Stopping force, Ion range},
+	abstract = {SRIM is a software package concerning the Stopping and Range of Ions in Matter. Since its introduction in 1985, major upgrades are made about every six years. Currently, more than 700 scientific citations are made to SRIM every year. For SRIM-2010, the following major improvements have been made: (1) About 2800 new experimental stopping powers were added to the database, increasing it to over 28,000 stopping values. (2) Improved corrections were made for the stopping of ions in compounds. (3) New heavy ion stopping calculations have led to significant improvements on SRIM stopping accuracy. (4) A self-contained SRIM module has been included to allow SRIM stopping and range values to be controlled and read by other software applications. (5) Individual interatomic potentials have been included for all ion/atom collisions, and these potentials are now included in the SRIM package. A full catalog of stopping power plots can be downloaded at www.SRIM.org. Over 500 plots show the accuracy of the stopping and ranges produced by SRIM along with 27,000 experimental data points. References to the citations which reported the experimental data are included.}
+}
+
+@article{Mohan_2022_PRO,
+	author = {Mohan, Radhe},
+	title = {A review of proton therapy – Current status and future directions},
+	journal = {Precision Radiation Oncology},
+	volume = {6},
+	number = {2},
+	pages = {164-176},
+	keywords = {intensity-modulated proton therapy, proton therapy, relative biological effectiveness (RBE), uncertainties in proton therapy},
+	doi = {https://doi.org/10.1002/pro6.1149},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/pro6.1149},
+	eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/pro6.1149},
+	year = {2022}
+}
+
+@misc{Mayo_2024_Cancer, 
+	author = {Mayo Clinic Staff}, 
+	title = {Radiation Therapy}, 
+	year = {2024}, 
+	note={\url{https://www.mayoclinic.org/tests-procedures/radiation-therapy/about/pac-20385162}}
+}
+
+
+@article{Wilson_1946_Rad,
+	author = {Wilson, Robert R.},
+	title = {Radiological Use of Fast Protons},
+	journal = {Radiology},
+	volume = {47},
+	number = {5},
+	pages = {487-491},
+	year = {1946},
+	doi = {10.1148/47.5.487},
+	note ={PMID: 20274616},
+	URL = {https://doi.org/10.1148/47.5.487},
+	eprint = {https://doi.org/10.1148/47.5.487}
+}
+
+@article{Bragg_1905_JOS,
+	author = {W. H. Bragg and R. Kleeman},
+	title = {XXXIX. On the α particles of radium, and their loss of range in passing through various atoms and molecules },
+	journal = {The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+	volume = {10},
+	number = {57},
+	pages = {318--340},
+	year = {1905},
+	publisher = {Taylor \& Francis},
+	doi = {10.1080/14786440509463378},
+	URL = {https://doi.org/10.1080/14786440509463378},
+	eprint = {https://doi.org/10.1080/14786440509463378}
+}
+
+@article{Linz_2016_LaPB,
+	title = {Laser-driven ion accelerators for tumor therapy revisited},
+	author = {Linz, Ute and Alonso, Jose},
+	journal = {Phys. Rev. Accel. Beams},
+	volume = {19},
+	issue = {12},
+	pages = {124802},
+	numpages = {8},
+	year = {2016},
+	month = {Dec},
+	publisher = {American Physical Society},
+	doi = {10.1103/PhysRevAccelBeams.19.124802},
+	url = {https://link.aps.org/doi/10.1103/PhysRevAccelBeams.19.124802}
+}
+
+
+@misc{OSU_CCC, 
+	title = {}, 
+	howpublished = {\url{https://cancer.osu.edu/for-patients-and-caregivers/learn-about-cancers-and-treatments/clinical-services-at-the-james/radiation-oncology/treatment/proton-therapy}}, 
+	note = {Accessed: 2024-12-19}
+}
+
 @misc{Nobel_2023,
 	author  = {NobelPrize.org},
 	year	= {2023},
