--- a/acronyms.tex
+++ b/acronyms.tex
@@ -1,9 +1,9 @@
 %A list of common acronyms
 %Only those used will be displayed, so you can just add to this list
-\newacronym{AFM}{AFM}{atomic force microscopy}
-\newacronym{BCS}{BCS}{Bardeen-Cooper-Schrieffer}
-\newacronym{EPR}{EPR}{electron paramagnetic resonance}
-\newacronym{NMR}{NMR}{nuclear magnetic resonance}
+\newacronym{LLNL}{LLNL}{Lawrence Livermore National Laboratory}
+\newacronym{LANL}{LANL}{Los Alamos National Laboratory}
+\newacronym{NIF}{NIF}{National Ignition Facility}
+\newacronym{RF}{RF}{Radio Frequency}
 \newacronym{QCD}{QCD}{quantum chromodynamics}
 \newacronym{QED}{QED}{quantum electrodynamics}
 \newacronym{WKB}{WKB}{Wentzel-Kramers-Brillouin}
