--- a/motivation.bib
+++ b/motivation.bib
@@ -4,6 +4,36 @@
 	pages={1–50}
 }
 
+@article{Simpson_2021_PPCF,
+	doi = {10.1088/1361-6587/ac2349},
+	url = {https://dx.doi.org/10.1088/1361-6587/ac2349},
+	year = {2021},
+	month = {nov},
+	publisher = {IOP Publishing},
+	volume = {63},
+	number = {12},
+	pages = {124006}
+}
+
+@article{Zylstra_2012_RSI,
+	author = {Zylstra, A. B. and Li, C. K. and Rinderknecht, H. G. and Séguin, F. H. and Petrasso, R. D. and Stoeckl, C. and Meyerhofer, D. D. and Nilson, P. and Sangster, T. C. and Le Pape, S. and Mackinnon, A. and Patel, P.},
+	title = {Using high-intensity laser-generated energetic protons to radiograph directly driven implosions},
+	journal = {Review of Scientific Instruments},
+	volume = {83},
+	number = {1},
+	pages = {013511},
+	year = {2012},
+	month = {01},
+	issn = {0034-6748},
+	doi = {10.1063/1.3680110},
+	url = {https://doi.org/10.1063/1.3680110},
+	eprint = {https://pubs.aip.org/aip/rsi/article-pdf/doi/10.1063/1.3680110/16073857/013511\_1\_online.pdf},
+}
+
+
+
+
+
 @article{Ziegler_2010_SRIM,
 	title = {SRIM – The stopping and range of ions in matter (2010)},
 	journal = {Nuclear Instruments and Methods in Physics Research Section B: Beam Interactions with Materials and Atoms},
